# pipper

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .mypy.ini  README.md  docker-compose.yaml  pyproject.toml  vanilla.dockerfile
.github/workflows/: ci.yml
pipper/: __init__.py  authorizer.py  bundler.py  command.py  downloader.py  environment.py  info.py  installer.py  parser.py  publisher.py  repository.py  s3.py  wrapper.py
pipper/tests/: test_authorizer.py  utils.py
pipper/tests/commands/: foo.pipper.fake  test_bundler.py  test_info.py  test_install.py  test_publish.py
pipper/tests/versioning/: test_compare_constraint.py  test_explode.py  test_find_latest_match.py  test_parse_package_url.py  test_remote_version.py  test_serialize.py  test_serialize_prefix.py  test_versioning.py
pipper/versioning/: __init__.py  definitions.py  serde.py
testing_scenarios/hello_pipper/: setup.py
testing_scenarios/hello_pipper_poetry/: pyproject.toml
testing_scenarios/hello_pipper_uv/: pyproject.toml
