[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipper"
version = "0.11.0"
description = "A serverless Python package manager for private packages that runs on S3."
authors = [
    {name = "Scott Ernst", email = "swernst@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["aws", "python", "package manager", "s3", "serverless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "requests>=2.24.0",
    "semver>=2.13.0",
    "boto3>=1.16.0",
    "pip",
    "wheel",
    "setuptools",
    "build",
    "pkginfo",
    "packaging",
    "toml",
    "taskipy>=1.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-runner",
    "pytest-cov",
    "mypy",
    "coverage",
    "lobotomy>=0.4.0",
    "types-toml",
    "types-requests",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/rocketboosters/pipper"
Repository = "https://github.com/rocketboosters/pipper"
Documentation = "https://github.com/rocketboosters/pipper"

[project.scripts]
pipper = "pipper.command:run"

[tool.hatch.build.targets.wheel]
packages = ["pipper"]

[tool.hatch.build.targets.sdist]
exclude = [
    "pipper/tests",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "E",    # pycodestyle
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "C90",  # radon
]
ignore = [
  "T201",   # Allow print statements
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["lobotomy/tests"]
addopts = "--cov=lobotomy --cov-report=term-missing --cov-report=xml"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.taskipy.tasks]
# https://github.com/illBeRoy/taskipy
# https://opentelemetry.io/docs/instrumentation/python/mypy/
sync-all = "uv sync --extra dev"
mypy = "mypy . --install-types --non-interactive --ignore-missing-imports --namespace-packages"
test = "pytest . --cov-report=term-missing --cov-report=xml --cov=."
format = "uvx ruff format"
ruff = "uvx ruff check"
lint = "task ruff && task mypy"
check = "task format && task lint && task test"
