[tool.poetry]
name = "hello-pipper-poetry"
version = "0.0.0"
description = "Test example for bundling poetry projects."
authors = ["Foo Bar <foo@bar.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = ">=2.24.0"
semver = ">=2.13.0"
boto3 = ">=1.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
